--- a/projekt1-profil/style.css
+++ b/projekt1-profil/style.css
@@ -12,7 +12,6 @@ html { box-sizing: border-box; }
  facebook   #3b5998
  twitter    #1da1f2
 */
-* {box-sizing: border-box;}
 
 .foto {width: 250px;
         margin-left: 1rem;
@@ -35,9 +34,8 @@ html { box-sizing: border-box; }
 .logo {background-color: #b92e81;
     border-radius: 180%;
 position: absolute;
-top: 150px;
-left: 200px;
-z-index: 1;}
+top: 160px;
+left: 200px;}
 
 .portfolio {display: block;
     width: 250px;
@@ -56,12 +54,12 @@ z-index: 1;}
 .twitter {display: inline-block;
     width: 125px;
     padding: 1rem;
-    border: 1px;
+    border: 0,5px;
     border-color: #3f464d;
-    background: #1da1f2}
+    background: black}
 
-.portfolio a {padding: 3rem; color: white; font-family: 'Montserrat';}
-.facebook a {padding: 1.5rem; color: white; font-family: 'Montserrat';}
-.twitter a {padding: 1.5rem;color: white; font-family: 'Montserrat';}
+.portfolio a {color: white; font-family: 'Montserrat';}
+.facebook a {color: white; font-family: 'Montserrat';}
+.twitter a {color: white; font-family: 'Montserrat';}
 
 body {background-color: #bdc3c7;}
