--- a/projekt1-profil/style.css
+++ b/projekt1-profil/style.css
@@ -15,7 +15,7 @@ html { box-sizing: border-box; }
 
 .foto {width: 250px;
         margin-left: 1rem;
-    margin-bottom: -0.5rem;}
+        margin-bottom: -0.5rem;}
 
 .obsah {position: relative;
     margin-top: 0rem;
@@ -27,7 +27,7 @@ html { box-sizing: border-box; }
     background: #31363b;
     margin: 0,5rem;
     padding: 1rem;
-    font-size: 16px; 
+    font-size: 15px; 
     font-family: 'Source Sans Pro' , sans-serif;}
 
 
@@ -59,8 +59,22 @@ z-index: 1;}
     border-color: #3f464d;
     background:  #1da1f2}
 
-.portfolio a {padding: 3.5rem; color: white; font-family: 'Montserrat';}
-.facebook a {padding: 1.3rem; color: white; font-family: 'Montserrat';}
-.twitter a {padding: 1.3rem; color: white; font-family: 'Montserrat';}
+.portfolio a {text-decoration: none;
+     text-transform:uppercase;
+     padding: auto;
+      color: white;
+      font-family: 'Montserrat';}
+
+.facebook a {text-decoration: none;
+     text-transform:uppercase;
+     padding:0.5rem;
+      color: white;
+       font-family: 'Montserrat';}
+
+.twitter a {text-decoration: none;
+     text-transform:uppercase;
+     padding: 0.5rem;
+      color: white;
+       font-family: 'Montserrat';}
 
 body {background-color: #bdc3c7;}
