--- a/projekt1-profil/style.css
+++ b/projekt1-profil/style.css
@@ -15,66 +15,74 @@ html { box-sizing: border-box; }
 
 .foto {width: 250px;
         margin-left: 1rem;
-        margin-bottom: -0.5rem;}
+        margin-bottom: -0.5rem;
+        box-shadow: 1px 2px 7px #31363b}
+
+body {background-color: #bdc3c7}
 
 .obsah {position: relative;
     margin-top: 0rem;
     margin-bottom: -1rem;
     margin-left: 1rem;    
-    height: 400px;
+    height: 350px;
     width: 250px;
     color: whitesmoke;
     background: #31363b;
     margin: 0,5rem;
     padding: 1rem;
     font-size: 15px; 
-    font-family: 'Source Sans Pro' , sans-serif;}
+    font-family: 'Source Sans Pro' , sans-serif;
+    box-shadow: 1px 2px 7px #31363b}
 
+.obsah .jmeno{font-family: Montserrat, sans-serif;
+    font-size: 28px;}
 
 .logo {background-color: #b92e81;
-    border-radius: 180%;
-position: absolute;
-top: 150px;
-left: 200px;
-z-index: 1;}
+    border-radius: 50%;
+    position: absolute;
+    top: 150px;
+    left: 200px;
+    z-index: 1;}
 
-.portfolio {display: block;
+.odkazy {padding: 0; margin: 16px;}
+
+.odkazy a {text-decoration: none;
+    text-transform:uppercase;
+    text-align: center;
+    padding: 0rem;
+    box-shadow: 1px 2px 7px #31363b;
+    color: white;
+    font-family: 'Montserrat';font-weight: bold;
+    }
+
+.portfolio {display: block;    
     width: 250px;
-    padding: 1rem;
-    border: 0,5px;
-    border-color: #3f464d;
-    background:  #31363b;}
+    padding: 1rem 3rem 1rem;
+    border: solid 2px #3f464d;
+    background:  #31363b;
+    box-shadow: 1px 2px 7px #31363b}
+
+.portfolio:hover {background-color: #e74c3c;}
 
 .facebook {display: inline-block;
     width: 125px;
     padding: 1rem;
-     border: 0,5px;
-     border-color: #3f464d;
-     background:  #31363b}
+    border:  solid 1px #3f464d;
+    background:  #31363b;
+    box-shadow: 1px 2px 7px #31363b}
+
+.facebook:hover {background-color: #3b5998;}
 
 .twitter {display: inline-block;
     width: 125px;
     padding: 1rem;
-    border: 0,5px;
-    border-color: #3f464d;
-    background:  #1da1f2}
+    border: solid 1px #3f464d;
+    background:  #31363b;
+    box-shadow: 1px 2px 7px #31363b}
 
-.portfolio a {text-decoration: none;
-     text-transform:uppercase;
-     padding: auto;
-      color: white;
-      font-family: 'Montserrat';}
+.twitter:hover {background-color: #1da1f2;}
 
-.facebook a {text-decoration: none;
-     text-transform:uppercase;
-     padding:0.5rem;
-      color: white;
-       font-family: 'Montserrat';}
 
-.twitter a {text-decoration: none;
-     text-transform:uppercase;
-     padding: 0.5rem;
-      color: white;
-       font-family: 'Montserrat';}
 
-body {background-color: #bdc3c7;}
+
+   
